fix competitions and prize cards overflow

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -1380,10 +1380,6 @@ button.App-button {
   .App-card-long-content {
     grid-template-columns: 1fr;
   }
-  .default-container {
-    padding-left: 1.2rem;
-    padding-right: 1.2rem;
-  }
 
   .page-layout {
     padding-top: 2.5rem;
